test/validator/simple_array.orderly
array [
      string {0,10};
];