test/negative_cases/missed_semicolon.orderly
object {
  object {
    string first  # hey! missing a semicolon!
    string last;
  } name;
  integer age [0,200];
} person;
